#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2014-06-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999994 released.

        * More work on New User Experience.

        * New version of Term::Menus paired with this release.


2014-06-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999993 released.

        * New version of Term::Menus paired with this release.


2014-06-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999992 released.

        * Beginning work on New User Experience & Tutorial.

        * New version of Term::Menus paired with this release.


2014-06-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999991 released.

        * More fixes for Makefile.PL.

        * ssh identity_file now implemented option for ssh and sftp.


2014-05-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999990 released.

        * More fixes for Makefile.PL.


2014-05-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999989 released.

        * Updated Module directory from Module::Install.


2014-05-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999988 released.

        * Changed Makefile.PL to look inside of author dir
          in cpan build directory when building.


2014-05-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999987 released.

        * Changed Makefile.PL to look inside of author dir
          in cpan build directory when building.


2014-01-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999986 released.
