@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999994';
+our $VERSION='0.99999995';
 
 
 use 5.005;
