@@ -19,6 +19,15 @@
 ################################################################
 
 
+2014-06-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999995 released.
+
+        * More work on New User Experience.
+
+        * New version of Term::Menus paired with this release.
+
+
 2014-06-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999994 released.
